@@ -12,9 +12,9 @@ public class XmlUtils {
                 .replaceAll("[ ]+", " ")
 //                .replaceAll("\n[ ]+", " ")
                 .replace("[b]", "§l")
-                .replace("[/b]", "§r")
+                .replace("[b/]", "§r")
                 .replace("[s]", "§m")
-                .replace("[/s]", "§r")
+                .replace("[s/]", "§r")
                 .replace("[u]", "§n")
                 .replace("[u/]", "§r")
                 .replace("[blue]", "§1")
