@@ -5,6 +5,8 @@
     * Lithium day and special stones, grass days
     * Refactoring package
     * Material support: new salts
+    * New upgrade system
+    * New upgrade items
 
 2017-05-03  F. <>
     * Helium and Dirt day, descriptions and recipes
